--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ShutdownApplet
-version = 0.0.1
+version = 0.0.2
 author = Tobias Glaser
 description = A Simple GUI to schedule a system shutdown
 long_description = file: README.md
@@ -24,5 +24,5 @@ python_requires = >=3.10
 include_package_data = True
 
 [options.entry_points]
-console_scripts =
+gui_scripts =
     ShutdownApplet = ShutdownApplet.ShutdownApplet:main
